--- a/app/assets/stylesheets/creative.css
+++ b/app/assets/stylesheets/creative.css
@@ -196,6 +196,11 @@ header .header-content {
 header .header-content .header-content-inner h1 {
     margin-top: 0;
     margin-bottom: 0;
+    padding:10px;
+    background:#f8f8f8;
+    opacity:0.5;
+    width:100%;
+    color:black;
     text-transform: uppercase;
     font-weight: 700;
 }
